# bigsets-rs

./: .gitignore  2025-10-05-do-you-know-the-paper-httpsdlacmorgdoi1011.txt  ARCHITECTURE.md  Cargo.toml  NOTES.md  README.md  config.toml  replication_plan.md
.claude/: settings.local.json
bigsets-erl/src/: bigset.erl  bigset_client.erl
claude_hist/: 2025-10-06-we-made-some-tests.txt
crates/bigsets/: Cargo.toml  build.rs
crates/bigsets/proto/: replication.proto
crates/bigsets/sql/: add_elems.sql  remote_add.sql  remote_rem.sql  remove_elems.sql
crates/bigsets/src/: addwinsset.rs  api.rs  api.rs.old  bigset.rs  buffers.rs  commands.rs  commands.rs.old  config.rs  core_server.rs  db.rs  lib.rs  network.rs  new_api.rs  orswot.rs  proto.rs  resp.rs  server.rs  server.rs.old  types.rs  wrapper.rs
crates/bigsets/src/replication/: manager.rs  mod.rs  server.rs
crates/bigsets/src/storage/: mod.rs  sql_utils.rs  sqlite.rs  storage_trait.rs
crates/bigsets/tests/: integration_replication.rs  proptest.proptest-regressions  proptest.rs  unit_server.rs
