[workspace]
resolver = "2"
members = [
    "crates/bigsets",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Russell Brown"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Common dependencies can be defined here
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
config = "0.14"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
bytes = { version = "1.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.13"
prost-types = "0.13"
