[package]
name = "bigsets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bigsets-server"
path = "src/bin/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
config.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
