[package]
name = "bigsets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bigsets-server"
path = "src/bin/main.rs"

[[bin]]
name = "bigsets-dev"
path = "src/bin/dev.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
config.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prost.workspace = true
prost-types.workspace = true
async-trait.workspace = true
clap.workspace = true
tempfile.workspace = true

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
proptest.workspace = true
proptest-state-machine.workspace = true
